[package]
name = "another-paginate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
serde_json = "1.0"
serde_derive = "1.0"
serde_with = { version = "1.4.0", features = ["json"]}
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]} 
tokio = { version = "1", features = ["full"] }
dotenv = "0.13.0"